--- a/views/team.erb
+++ b/views/team.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>
-     <h1><%= "Team Name: #{@team_inputs[name]}"%></h1>
+     <h1><%= "Team Name: #{@team_inputs[:name]}"%></h1>
 
  </body>
 </html>
